--- a/style.css
+++ b/style.css
@@ -27,11 +27,24 @@ body {
     padding: 0;
 }
 
+img {
+    width: 100%;
+}
+
 
 /* universal style end */
 
 
 /* Mobile design start */
+
+
+/* universal style for mobile */
+
+.mobile__container {
+    max-width: 576px;
+    width: 95%;
+    margin: 0 auto;
+}
 
 
 /* navbar mobile start*/
@@ -70,7 +83,6 @@ body {
     top: 0.75rem;
     right: 1rem;
     display: none;
-    /* background-color: aqua; */
     flex-direction: column;
     justify-content: space-between;
     width: 30px;
@@ -80,18 +92,17 @@ body {
 .toggle-button .bar {
     height: 3px;
     width: 100%;
-    background-color: white;
+    background-color: black;
     border-radius: 10px;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 576px) {
     .toggle-button {
         display: flex;
     }
     .navbar-links {
         display: none;
         width: 100%;
-        /* background-color: aqua; */
     }
     .navbar {
         flex-direction: column;
@@ -110,6 +121,15 @@ body {
     .navbar-links.active {
         display: flex;
     }
+}
+
+.facts__card img {
+    width: 45px;
+}
+
+.sponsor__img img {
+    height: 50px;
+    width: 166px;
 }
 
 
