--- a/style.css
+++ b/style.css
@@ -29,6 +29,39 @@ body {
 
 img {
     width: 100%;
+    border-radius: 5px;
+}
+
+button {
+    background-color: #FF900E;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+p {
+    font-size: 16px;
+    color: #727272;
+    font-weight: 400;
+}
+
+.header__bg {
+    background-color: #fff4e6;
+}
+
+.brand-title {
+    font-size: 45px;
+    color: #131313;
+    font-weight: 700;
+}
+
+.navbar-links a {
+    font-size: 16px;
+    color: #424242;
+    font-weight: 500;
 }
 
 
@@ -36,15 +69,6 @@ img {
 
 
 /* Mobile design start */
-
-
-/* universal style for mobile */
-
-.mobile__container {
-    max-width: 576px;
-    width: 95%;
-    margin: 0 auto;
-}
 
 
 /* navbar mobile start*/
@@ -58,7 +82,7 @@ img {
 
 .brand-title {
     font-size: 1.5rem;
-    margin: 0.5rem;
+    margin-top: 0.4rem;
 }
 
 .navbar-links ul {
@@ -96,9 +120,31 @@ img {
     border-radius: 10px;
 }
 
+.facts__card img {
+    width: 45px;
+}
+
+.sponsor__img img {
+    height: 50px;
+    width: 166px;
+}
+
 @media (max-width: 576px) {
+    .container {
+        max-width: 576px;
+        width: 95%;
+        margin: 0 auto;
+    }
+    .header__bg {
+        padding: 15px;
+        margin-bottom: 25px;
+    }
     .toggle-button {
         display: flex;
+        top: 1.4rem
+    }
+    .text__center {
+        text-align: center;
     }
     .navbar-links {
         display: none;
@@ -121,15 +167,6 @@ img {
     .navbar-links.active {
         display: flex;
     }
-}
-
-.facts__card img {
-    width: 45px;
-}
-
-.sponsor__img img {
-    height: 50px;
-    width: 166px;
 }
 
 
