--- a/style.css
+++ b/style.css
@@ -135,6 +135,9 @@ p {
         width: 95%;
         margin: 0 auto;
     }
+    .text__center {
+        text-align: center;
+    }
     .header__bg {
         padding: 15px;
         margin-bottom: 25px;
@@ -142,9 +145,6 @@ p {
     .toggle-button {
         display: flex;
         top: 1.4rem
-    }
-    .text__center {
-        text-align: center;
     }
     .navbar-links {
         display: none;
@@ -166,6 +166,43 @@ p {
     }
     .navbar-links.active {
         display: flex;
+    }
+    .features__img img {
+        margin: 10px 0;
+    }
+    .features__card {
+        /* border: 2px solid red; */
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
+        padding: 10px 0;
+        margin-bottom: 12px;
+    }
+    .card {
+        width: 90%;
+        /* border: 2px solid black; */
+        margin: 4px auto;
+    }
+    .card p,
+    h5 {
+        margin: 5px 0;
+    }
+    .architect {
+        margin: 20px 0;
+    }
+    .experience {
+        background-color: #FF900E;
+        width: 120px;
+        color: white;
+        text-align: center;
+        border-radius: 4px;
+        padding: 20px;
+        position: relative;
+        top: -45px;
+    }
+    .experience>p,
+    .experience>h1 {
+        color: white;
+        margin: 0;
     }
 }
 
