--- a/style.css
+++ b/style.css
@@ -125,8 +125,8 @@ p {
 }
 
 .sponsor__img img {
-    height: 50px;
-    width: 166px;
+    height: 40px;
+    width: 146px;
 }
 
 @media (max-width: 576px) {
@@ -143,6 +143,10 @@ p {
     }
     .fact__center {
         text-align: center;
+    }
+    .sponsor__center {
+        text-align: center;
+        margin: 60px 0;
     }
     .header__bg {
         padding: 15px;
@@ -181,7 +185,7 @@ p {
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         border-radius: 5px;
         padding: 10px 0;
-        margin-bottom: 12px;
+        margin: 20px 0;
     }
     .card {
         width: 90%;
@@ -227,6 +231,19 @@ p {
     .facts h2,
     p {
         margin: 4px 0;
+    }
+    .img__flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 60px;
+    }
+    .footer {
+        background-color: #FFF4E7;
+        padding: 10px;
+        text-align: center;
+        margin-top: 20px;
     }
 }
 
